--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,8 +240,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  
-  background: url("../img/hero-bg.jpg") top center;
+  background-color: #111;
   background-size: cover;
 }
 
@@ -249,7 +248,6 @@ h6 {
 
 #hero:before {
   content: "";
-  
   position: absolute;
   bottom: 0;
   top: 0;
